--- a/kubernetes/backend/karsajobs-service.yml
+++ b/kubernetes/backend/karsajobs-service.yml
@@ -10,8 +10,8 @@ spec:
     app: karsajobs
     tier: backend
   ports:
-    - protocol: "TCP"
-      port: 8000
-      targetPort: 8000
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
       nodePort: 30007
   type: NodePort
