--- a/kubernetes/frontend/karsajobs-ui-service.yml
+++ b/kubernetes/frontend/karsajobs-ui-service.yml
@@ -10,7 +10,7 @@ spec:
     app: karsajobs
     tier: frontend
   ports:
-    - protocol: "TCP"
-      port: 8080
-      targetPort: 8080
+    - protocol: TCP
+      port: 8000
+      targetPort: 8000
   type: NodePort
