--- a/kubernetes/mongodb/mongo-service.yml
+++ b/kubernetes/mongodb/mongo-service.yml
@@ -2,10 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo-service
+  labels:
+    app: karsajobs
+    tier: database
 spec:
   selector:
-    app: mongodb
+    app: karsajobs
+    tier: backend
   ports:
-    - protocol: "TCP"
+    - protocol: TCP
       port: 27017
       targetPort: 27017
